--- a/app/src/main/res/layout/item_qipao.xml
+++ b/app/src/main/res/layout/item_qipao.xml
@@ -9,15 +9,12 @@
         android:id="@+id/left_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:background="@drawable/item_lift">
-
-
-
-
+        android:background="@drawable/item_lift"
+        android:gravity="center"
+        >
 
         <TextView
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:id="@+id/left_msg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
