--- a/app/src/main/res/layout/home2.xml
+++ b/app/src/main/res/layout/home2.xml
@@ -5,5 +5,9 @@
     android:orientation="vertical">
 
 
-
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
 </LinearLayout>
